# QLS_testing

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: default.yaml
configs/examples/: hardware_mass_action_folded_qsvt.yaml  hhl_small_pipeline.yaml  lindblad_amplitude_damping.yaml  lindblad_enzyme_ndme.yaml  lindblad_enzyme_pennylane.yaml  lindblad_practice_pennylane.yaml  pathway_chain_m3_folded_qsvt.yaml  pathway_chained_segments_folded_qsvt.yaml  practice_complex_vqls.yaml  practice_dense4_pennylane_qsvt.yaml  practice_indefinite_2.yaml  practice_sparse_chain_16.yaml  qssa_taylor.yaml  restarted_carleman_toy.yaml  toy_classical.yaml  toy_pennylane.yaml  toy_pennylane_hhl.yaml  toy_pennylane_qsvt.yaml  vqls_regression.yaml
docs/: api_reference.md  dashboard.md  roadmap.md
docs/hardware_path/: README.md  integrator_options.md  pathway_solver_walkthrough.md  pathway_sweeps.md  readout_strategy.md  resource_snapshot.md  structured_block_encoding.md
docs/math/: carleman_linearization.md  complexity_derivations.md  error_and_complexity.md  integrators.md  (+4 more)
notebooks/: Test_QLS_June15 (1).ipynb
qls_testing/: __init__.py
scripts/: analyze_hardware_path.py  generate_plots.py  normalize_markdown_math.py  run_from_cli.py  sweep_parameters.py
tests/: test_config.py  test_end_to_end_small.py  test_hardware_path.py  test_integrators.py  test_lindblad.py  test_linearization.py  test_pennylane.py  test_practice_systems.py  test_qls.py  test_reference_consistency.py  test_reports_and_visualization.py
(+58 files in other folders)
